Refactor to simplify code and remove unused imports in metrics, feature extraction, and article loading modules